# LocalChatAPP-with-flask-socketio

backend/: app.py  pyproject.toml
frontend/: account.html  index.html
