[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MT Shafiei <mr.efiot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-socketio = "^5.3.6"
simple-websocket = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
